--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Machine learning and Deep learning
+description: In this machine learning and deep learning projects
