--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-cayman
 title: Machine learning and Deep learning
 description: In this machine learning and deep learning projects
+{% for repository in site.github.public_repositories %}
+  * [{{ carprediction.name }}]({{ https://github.com/aadigedhar/carprediction.html_url }})
+{% endfor %}
