--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-cayman
 title: Machine learning and Deep learning
 description: In this machine learning and deep learning projects
 {% for carprediction in site.github.public_repositories %}
-  * [{{ carprediction.name }}]({{ https://github.com/aadigedhar/carprediction.html_url }})
+  * [{{ carprediction.name }}]({{ https://github.com/aadigedhar/index.html_url }})
 {% endfor %}
